--- a/package.json
+++ b/package.json
@@ -18,18 +18,14 @@
     "@react-native-documents/picker": "^11.0.0",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/messaging": "^21.12.0",
-    "@react-native/gradle-plugin": "^0.77.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "google-auth-library": "^9.15.1",
     "moment": "^2.30.1",
     "pusher-js": "^8.4.0",
-    "react": "19.1.0",
-    "react-native": "0.81.0",
+    "react": "19.1.1",
+    "react-native": "0.82.1",
     "react-native-blob-util": "^0.23.2",
     "react-native-date-picker": "^5.0.13",
     "react-native-device-info": "^14.0.4",
@@ -43,32 +39,32 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-month-year-picker": "^1.9.0",
     "react-native-network-info": "^5.2.1",
-    "react-native-reanimated": "^3.19.1",
+    "react-native-reanimated": "^4.1.5",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
+    "@react-native-community/cli": "^20.0.2",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.81.0",
-    "@react-native/eslint-config": "0.81.0",
-    "@react-native/metro-config": "0.81.0",
-    "@react-native/typescript-config": "0.81.0",
+    "@react-native/babel-preset": "0.82.1",
+    "@react-native/eslint-config": "0.82.1",
+    "@react-native/metro-config": "0.82.1",
+    "@react-native/typescript-config": "0.82.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-codegen": "^0.70.7",
-    "react-test-renderer": "19.1.0",
+    "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
   "engines": {
